force-app/main/default/objects/Team__c/fields/ImageId__c.field-meta.xml
<CustomField>
    <fullName>ImageId__c</fullName>
    <label>ImageId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>