force-app/main/default/objects/Team__c/fields/TeamName__c.field-meta.xml
<CustomField>
    <fullName>TeamName__c</fullName>
    <label>TeamName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>