force-app/main/default/objects/Team__c/fields/TeamSName__c.field-meta.xml
<CustomField>
    <fullName>TeamSName__c</fullName>
    <label>TeamSName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>